Bug 64455 - UI: The color line tool (toolbar "Line and Filling ") is not updated
Summary: UI: The color line tool (toolbar "Line and Filling ") is not updated
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.0.beta1
Hardware: Other All
: high normal
Assignee: Laurent Balland
URL:
Whiteboard: BSA target:4.1.3 target:4.2.0 target:...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-05-11 09:25 UTC by pierre-yves samyn
Modified: 2013-10-06 13:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-05-11 09:25:36 UTC
Hello

Steps to Reproduce:

1. File> New> Drawing
2. Draw an object (eg rectangle)
3. Change the color line via the toolbar or right-click the object and then "Line"
4. Draw a new object (rectangle or other except "line")

Expected Result: 
The tool "color line" in the toolbar "Line and Filling" shows the default color.

Actual result: 
The tool "color line" is not updated (shows the color of the object changed in step 3)

The tool is updated only if the line color of the selected object has been modified.

Reproduced with Windows 7 64bits and:
Version 4.0.3.1 (Build ID: a67943cd4d125208f4ea7fa29439551825cfb39)
Version 4.0.3.3 (Build ID: 0eaa50a932c8f2199a615e1eb30f7ac74279539)
Version: 4.1.0.0.alpha0+
Build ID: 04353c273142fba62ea9b5fe62d66ee8e13814a
TinderBox: Win-x86@6, Branch:master, Time: 2013-05-04_00:40:36 

Also Reproduced (QA-fr) with fedora17 and 4.0.3.3
so I put status to "new"

Regards
Pierre-Yves
Operating System: All
Version: 4.0.3.1 rc
Comment 1 pierre-yves samyn 2013-05-11 11:10:15 UTC
Change component for "UI" because the bug occurs in all modules...
Comment 2 Jorendc 2013-05-21 18:44:14 UTC
Please read this nice explanation of 'A': https://bugs.freedesktop.org/show_bug.cgi?id=63110#c1

This is regarding the background color, but it is also applicable for the color line tool:

<quote>

I can reproduce it with LO 4.0.2.2, but this is not a bug, but a specific feature, so that the background color function remembers the last used color.  This is very beneficial if you have to change several cells, because then you can easily adapt that background color to the other cells, because the function kepts the last used color and does not change it to the color of the current cell.  It is not useful if the background color function would show the current background color of a specific cell, because you use this function especially to adapt a new color to this cell and not to see the color.

If you want to see the background color of a selected cell, then you can use the following steps: 
1. Right mouse click on the cell
2. Go to FORMAT CELLS...
3. Go to the tab BACKGROUND
4. The used color is framed

</quote>
Comment 3 pierre-yves samyn 2013-05-23 07:20:47 UTC
Hello, 

Thank you for your reply

We reopen this bug that we (qa-fr list) consider a regression due to the following inconsistencies.

1. Lines do not have "applicator" button unlike the background  color cell  tool  where you just click to apply. For lines you have to open the list and choose.

2. The spreadsheet tool keeps the last color used even if the current selection has been changed (and displays an other color). For the lines, if the current selection has been modified, the tool displays the color and not the last used.

example Calc
a. A1 background in yellow
b. Click C1 background in green
c. Select A1, green is still selected in the tool

example Line
a. Draw a rectangle, line color yellow 
b. Draw another rectangle, line color green 
c. Select  the first rectangle, yellow is selected

3. The Area (filling) color is not managed in the same way
as the lines.

a. Draw a rectangle, filling color yellow, line color green. Keep the rectangle selected then 
b. Draw another rectangle, green is always selected in line color tool but the fill color is that by default (Tango: sky blue 1 on my configuration).

Conclusion:
1. The user can *not* rely on the display of the toolbar. It is a regression.
2. The parallel with cell colors in calc can not be ok because for lines, as shewn in 1, can not apply this color to a new object.

Best regards
Pierre-Yves
Comment 4 Laurent Balland 2013-05-23 08:07:25 UTC
Hello,

I confirmed it is a regression as color line is the only parameter which is not updated when selecting different objects:
1. draw several object with different lines (color, thickness, dot or point), different filling (color, type), with or without shadow.
2. select each object one after one

Expected Result: 
Informations in Line and Filling toolbar should be updated.


Actual result:
Color line is not updated, but other informations are.
LibO 4.0.3.3
Comment 5 Jorendc 2013-05-23 09:08:25 UTC
Ok, I'm sorry about marking it as NOTABUG. Lets mark it as NEW due the inconsistencies. 

Kind regards,
Joren
Comment 6 Laurent Balland 2013-08-21 18:27:37 UTC
Confirmed with LibO Version: 4.2.0.0.alpha0+
Build ID: 6571193609f4fb4e5ac714b55787d172a86983f
on OpenSuse 12.3
Comment 7 Laurent Balland 2013-08-21 18:32:07 UTC
Version: 4.2.0.0.alpha0+
Build ID: 6571193609f4fb4e5ac714b55787d172a86983f
with Sidebar, the color line is CORRECT inside the sidebar but is INCORRECT on Line and Filling toolbar
Comment 8 Laurent Balland 2013-08-21 19:15:58 UTC
Bug is present is LibO 4.0.0 RC1
Bug is NOT present in LibO 3.6.7.2
Comment 9 Laurent Balland 2013-08-21 21:37:50 UTC
The problem seems to be that the default line color has no name. The color seems to be more or less equivalent to "Tango: Sky Blue 2", but not exactly.

From LibO 4.0 default colors has been changed. If you open a file built with 3.x version there is no pb.

If you define a line color in the Default style there is no more problem.

The default line color seems to be defined as #3465af which corresponds to no color in the color list. It should be #3465a4 which is "Tango: Sky Blue 2". The simplest solution would be to change "Tango: Sky Blue 2" to #3465af (52,101,175) in standard.soc
Comment 10 Laurent Balland 2013-08-21 21:49:14 UTC
Sorry for my multiple messages.

A better solution would be to have both color in standard.soc #3465a4 and #3465af, the latter with a new name such as "Tango: Sky Blue 4".
Comment 11 Laurent Balland 2013-08-25 10:22:50 UTC
The problem is that Line color toolbox is unable to handle unknown color (on the opposite of Fill toolbox). The pb appear with LibO 4.0 because new default colors were chosen, and the default line color was undefined, but is present in all version of OOo/AOO/LibO:
- create a drawing with LibO 4.x with a shape with default colors
- open it any version of OOo, LibO or AOO and you can reproduce the bug described.
Comment 12 Commit Notification 2013-09-17 13:08:04 UTC
Ivan Timofeev committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=03a341775507502dd58598edc3fd805a8518550d&h=libreoffice-4-1

fdo#64455 Handle unknown color in color line


It will be available in LibreOffice 4.1.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2013-09-17 13:08:24 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=338ccf09e3d02dfd872464bb78c4e2d44aecf0b2

fdo#64455 Handle unknown color in color line



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2013-09-17 13:18:59 UTC
Laurent Balland-Poirier committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c85506265c8d78a103a267489e498aeee9434853&h=libreoffice-4-0

fdo#64455 Handle unknown color in color line


It will be available in LibreOffice 4.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.