fdo#64455 Handle unknown color in color line

Change-Id: Ice4205056cc64ae50bd3c8136aeae6f648adbd0b
Signed-off-by: Ivan Timofeev <timofeev.i.s@gmail.com>